Enhance Arabic and English language support for Hawelli product, update contact email, and implement scroll animations for improved user experience.

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -276,7 +276,7 @@
                                     <div>
                                         <p class="font-semibold text-gray-800 dark:text-white mb-1"
                                             data-i18n="contact.emailLabel">البريد الإلكتروني</p>
-                                        <a href="mailto:info@zaho.ly"
+                                        <a href="mailto:contact@zaho.ly"
                                             class="text-primary-600 dark:text-primary-400 hover:text-primary-700 dark:hover:text-primary-300">contact@zaho.ly</a>
                                     </div>
                                 </div>
