--- a/hawelli-page/index.html
+++ b/hawelli-page/index.html
@@ -118,11 +118,21 @@ body {
 /* ===== LOGO MOCKUP ===== */
 .phone {
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+  height: 280px;
+  margin: 0 auto;
+  background: #ffffff;
+  border-radius: 50%;
+  padding: 8px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
 }
 
 .phone img {
-  width: 260px;
-  height: 260px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   object-fit: cover;
   filter: drop-shadow(0 30px 60px rgba(0,0,0,0.35));
@@ -272,7 +282,7 @@ h2::after {
     </div>
 
     <div class="phone">
-      <img src="image.png" alt="EC8BC5BF-9DF8-4B8D-AE9A-2D6C2D4E2D33.jpeg">
+      <img src="../assets/images/image.png" alt="EC8BC5BF-9DF8-4B8D-AE9A-2D6C2D4E2D33.jpeg">
     </div>
   </div>
 </div>
