--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         الإلكترونية</p>
 
                     <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start animate-slide-up">
-                        <a href="https://hawelli.zaho.ly" target="_blank"
+                        <a href="hawelli-page/index.html" target="_blank"
                             class="inline-flex items-center justify-center bg-white text-primary-600 px-8 py-4 rounded-xl font-bold text-lg hover:bg-gray-100 transition shadow-xl hover:shadow-2xl transform hover:-translate-y-1 space-x-2 rtl:space-x-reverse">
                             <i class="fas fa-rocket"></i>
                             <span data-i18n="hero.cta1">اكتشف حوّلي</span>
@@ -587,7 +587,7 @@
                                 اكتشف محفظة حوّلي، المحفظة الإلكترونية المتطورة التي تتيح لك إدارة أموالك بسهولة وأمان تام. حلول دفع مبتكرة تلبي احتياجاتك اليومية.
                             </p>
                             <div class="text-center">
-                                <a href="https://hawelli.zaho.ly" target="_blank"
+                                <a href="hawelli-page/index.html" target="_blank"
                                     class="inline-flex items-center justify-center bg-gradient-to-r from-primary-600 to-secondary-600 text-white px-8 py-4 rounded-xl font-bold text-lg hover:from-primary-700 hover:to-secondary-700 transition shadow-lg hover:shadow-xl transform hover:-translate-y-1 space-x-3 rtl:space-x-reverse">
                                     <i class="fas fa-external-link-alt text-xl"></i>
                                     <span data-i18n="hawelli.ctaButton">اكتشف حوّلي</span>
@@ -877,7 +877,7 @@
                             </h4>
                             <p class="mb-6 text-white/90" data-i18n="contact.ctaDesc">اكتشف المحفظة الإلكترونية التي
                                 ستغير طريقة تعاملك مع المال</p>
-                            <a href="https://hawelli.zaho.ly" target="_blank"
+                            <a href="hawelli-page/index.html" target="_blank"
                                 class="inline-flex items-center justify-center bg-white text-primary-600 px-6 py-3 rounded-xl font-bold hover:bg-gray-100 transition shadow-lg space-x-2 rtl:space-x-reverse">
                                 <i class="fas fa-rocket"></i>
                                 <span data-i18n="contact.ctaButton">اكتشف حوّلي</span>
@@ -925,7 +925,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4" data-i18n="footer.policies">السياسات</h4>
                     <ul class="space-y-2 text-gray-400 text-sm">
-                        <li><a href="https://privacy-policy.zaho.ly" class="hover:text-white transition" data-i18n="footer.privacyPolicy">Privacy Policy</a></li>
+                        <li><a href="privacy-policy/index.html" class="hover:text-white transition" data-i18n="footer.privacyPolicy">Privacy Policy</a></li>
                     </ul>
                 </div>
 
