feat: update Arabic and English vision texts, enhance navigation links, and create new Hawelli pages

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -319,7 +319,7 @@
                             </h4>
                             <p class="mb-6 text-white/90" data-i18n="contact.ctaDesc">اكتشف المحفظة الإلكترونية التي
                                 ستغير طريقة تعاملك مع المال</p>
-                            <a href="https://hawelli.zaho.ly" target="_blank"
+                            <a href="hawelli/index.html" target="_blank"
                                 class="inline-flex items-center justify-center bg-white text-primary-600 px-6 py-3 rounded-xl font-bold hover:bg-gray-100 transition shadow-lg space-x-2 rtl:space-x-reverse">
                                 <i class="fas fa-rocket"></i>
                                 <span data-i18n="contact.ctaButton">اكتشف حولي</span>
