--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         الإلكترونية</p>
 
                     <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start animate-slide-up">
-                        <a href="hawelli-page/index.html" target="_blank"
+                        <a href="hawelli/index.html" target="_blank"
                             class="inline-flex items-center justify-center bg-white text-primary-600 px-8 py-4 rounded-xl font-bold text-lg hover:bg-gray-100 transition shadow-xl hover:shadow-2xl transform hover:-translate-y-1 space-x-2 rtl:space-x-reverse">
                             <i class="fas fa-rocket"></i>
                             <span data-i18n="hero.cta1">اكتشف حوّلي</span>
@@ -538,9 +538,7 @@
                             <i class="fas fa-eye text-2xl"></i>
                         </div>
                         <h3 class="text-2xl font-bold mb-4" data-i18n="about.vision">رؤيتنا</h3>
-                        <p class="text-white/90 leading-relaxed text-lg" data-i18n="about.visionText">أن نكون الشركة
-                            الرائدة في مجال الدفع الرقمي والخدمات المالية الإلكترونية في ليبيا والمنطقة، من خلال تقديم
-                            حلول مبتكرة تعزز الشمول المالي وتواكب التطور التكنولوجي.</p>
+                        <p class="text-white/90 leading-relaxed text-lg" data-i18n="about.visionText">إن رؤية شركة زاهو لمنظومة الدفع الالكتروني في ليبيا تتمثل في استراتيجية "الجسر الرقمي"؛ فهي لا تكتفي بتقديم تطبيق تقني، بل تبني جسراً يربط بين البنية التحتية المصرفية واحتياجات المواطن اليومية، لتنقل المجتمع من الاعتماد على التعاملات النقدية الورقية إلى بيئة رقمية سريعة وآمنة. </p>
                     </div>
 
                     <!-- Mission -->
@@ -587,7 +585,7 @@
                                 اكتشف محفظة حوّلي، المحفظة الإلكترونية المتطورة التي تتيح لك إدارة أموالك بسهولة وأمان تام. حلول دفع مبتكرة تلبي احتياجاتك اليومية.
                             </p>
                             <div class="text-center">
-                                <a href="hawelli-page/index.html" target="_blank"
+                                <a href="hawelli/index.html" target="_blank"
                                     class="inline-flex items-center justify-center bg-gradient-to-r from-primary-600 to-secondary-600 text-white px-8 py-4 rounded-xl font-bold text-lg hover:from-primary-700 hover:to-secondary-700 transition shadow-lg hover:shadow-xl transform hover:-translate-y-1 space-x-3 rtl:space-x-reverse">
                                     <i class="fas fa-external-link-alt text-xl"></i>
                                     <span data-i18n="hawelli.ctaButton">اكتشف حوّلي</span>
@@ -877,7 +875,7 @@
                             </h4>
                             <p class="mb-6 text-white/90" data-i18n="contact.ctaDesc">اكتشف المحفظة الإلكترونية التي
                                 ستغير طريقة تعاملك مع المال</p>
-                            <a href="hawelli-page/index.html" target="_blank"
+                            <a href="hawelli/index.html" target="_blank"
                                 class="inline-flex items-center justify-center bg-white text-primary-600 px-6 py-3 rounded-xl font-bold hover:bg-gray-100 transition shadow-lg space-x-2 rtl:space-x-reverse">
                                 <i class="fas fa-rocket"></i>
                                 <span data-i18n="contact.ctaButton">اكتشف حوّلي</span>
