--- a/hawelli/hawelli-link.html
+++ b/hawelli/hawelli-link.html
@@ -7,11 +7,15 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
 
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 <style>
 :root {
   --primary: #4F6BFF;
   --deep: #2F3CFF;
   --accent: #00C2FF;
+  --android: #fff;
 }
 
 * {
@@ -39,7 +43,7 @@ body {
 /* ===== LOGO + TITLE ===== */
 .hero-title {
   display: flex;
-  flex-direction: row-reverse; /* الشعار على اليسار */
+  flex-direction: row-reverse;
   align-items: center;
   justify-content: center;
   gap: 18px;
@@ -47,11 +51,12 @@ body {
 }
 
 .hero-title img.logo {
-  width: 120px; /* تكبير الشعار */
+  width: 120px;
   height: 120px;
   border-radius: 50%;
   object-fit: cover;
   padding: 6px;
+  background: #fff;
 }
 
 .hero-title h1 {
@@ -65,36 +70,58 @@ body {
   margin-bottom: 40px;
 }
 
-/* ===== DOWNLOAD BUTTONS ===== */
+/* ===== STORE BUTTONS ===== */
 .store-buttons {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 14px;
-  max-width: 540px;
+  max-width: 560px;
   margin: auto;
 }
 
 .store-buttons a {
-  background: #ffffff;
-  color: var(--deep);
-  padding: 15px 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 16px 18px;
   border-radius: 14px;
   font-weight: 600;
+  font-size: 1rem;
   text-decoration: none;
   transition: 0.3s;
-  border: 2px solid rgba(255,255,255,0.5);
+  color: #0f172a;
 }
 
-.store-buttons a:hover {
+.store-buttons a i {
+  font-size: 1.2rem;
+}
+
+/* iOS */
+.ios {
+  background: #fff;
+}
+
+.ios:hover {
+  background: #fff;
   transform: translateY(-3px);
-  box-shadow: 0 12px 30px rgba(0,0,0,0.25);
+}
+
+/* Android */
+.android {
+  background: var(--android);
+}
+
+.android:hover {
+  background: #fff;
+  transform: translateY(-3px);
 }
 
 /* ===== POWERED ===== */
 .powered-zaho {
   display: inline-block;
   margin-top: 40px;
-  font-size: 1.1rem; /* زيادة بسيطة في الحجم */
+  font-size: 1.1rem;
   font-weight: 600;
   letter-spacing: 0.6px;
   animation: pulse 2.5s ease-in-out infinite;
@@ -105,11 +132,11 @@ body {
   50% { opacity: 1; }
 }
 
-/* ===== LANGUAGE TOGGLE BUTTON ===== */
+/* ===== LANGUAGE TOGGLE ===== */
 .lang-toggle {
   position: absolute;
   top: 20px;
-  right: 20px; /* start on right for Arabic */
+  right: 20px;
   background: #fff;
   color: var(--deep);
   border: none;
@@ -130,23 +157,37 @@ body {
 
 <body>
 
-<!-- Language Toggle -->
 <button class="lang-toggle" id="langToggle">English</button>
 
 <div class="hero">
 
   <div class="hero-title">
-    <img src="image.png" alt="Hawelli Logo" class="logo">
+    <img src="EC8BC5BF-9DF8-4B8D-AE9A-2D6C2D4E2D33.jpeg" alt="Hawelli Logo" class="logo">
     <h1 id="mainTitle">محفظة حولّي</h1>
   </div>
 
   <p id="subTitle">فلوسك في تليفونك</p>
 
   <div class="store-buttons">
-    <a href="#" id="btnIOSIndividual">iOS – أفراد</a>
-    <a href="#" id="btnIOSBusiness">iOS – أعمال</a>
-    <a href="#" id="btnAndroidIndividual">Android – أفراد</a>
-    <a href="#" id="btnAndroidBusiness">Android – أعمال</a>
+    <a href="#" class="ios" id="btnIOSIndividual">
+      <i class="fa-brands fa-apple"></i>
+      iOS – أفراد
+    </a>
+
+    <a href="#" class="ios" id="btnIOSBusiness">
+      <i class="fa-brands fa-apple"></i>
+      iOS – أعمال
+    </a>
+
+    <a href="#" class="android" id="btnAndroidIndividual">
+      <i class="fa-brands fa-android"></i>
+      Android – أفراد
+    </a>
+
+    <a href="#" class="android" id="btnAndroidBusiness">
+      <i class="fa-brands fa-android"></i>
+      Android – أعمال
+    </a>
   </div>
 
   <span class="powered-zaho">Powered by Zaho</span>
@@ -158,32 +199,30 @@ let isArabic = true;
 
 langToggle.addEventListener('click', () => {
   if (isArabic) {
-    // Switch to English
     document.documentElement.lang = 'en';
     document.documentElement.dir = 'ltr';
-    document.getElementById('mainTitle').textContent = "Hawelli Wallet";
-    document.getElementById('subTitle').textContent = "Your money in your phone";
-    document.getElementById('btnIOSIndividual').textContent = "iOS – Individual";
-    document.getElementById('btnIOSBusiness').textContent = "iOS – Business";
-    document.getElementById('btnAndroidIndividual').textContent = "Android – Individual";
-    document.getElementById('btnAndroidBusiness').textContent = "Android – Business";
+    mainTitle.textContent = "Hawelli Wallet";
+    subTitle.textContent = "Your money in your phone";
+    btnIOSIndividual.innerHTML = '<i class="fa-brands fa-apple"></i> iOS – Individual';
+    btnIOSBusiness.innerHTML = '<i class="fa-brands fa-apple"></i> iOS – Business';
+    btnAndroidIndividual.innerHTML = '<i class="fa-brands fa-android"></i> Android – Individual';
+    btnAndroidBusiness.innerHTML = '<i class="fa-brands fa-android"></i> Android – Business';
     langToggle.textContent = "العربية";
     langToggle.style.right = "auto";
-    langToggle.style.left = "20px"; // move toggle to left in English
+    langToggle.style.left = "20px";
     isArabic = false;
   } else {
-    // Switch to Arabic
     document.documentElement.lang = 'ar';
     document.documentElement.dir = 'rtl';
-    document.getElementById('mainTitle').textContent = "محفظة حولّي";
-    document.getElementById('subTitle').textContent = "فلوسك في تليفونك";
-    document.getElementById('btnIOSIndividual').textContent = "iOS – أفراد";
-    document.getElementById('btnIOSBusiness').textContent = "iOS – أعمال";
-    document.getElementById('btnAndroidIndividual').textContent = "Android – أفراد";
-    document.getElementById('btnAndroidBusiness').textContent = "Android – أعمال";
+    mainTitle.textContent = "محفظة حولّي";
+    subTitle.textContent = "فلوسك في تليفونك";
+    btnIOSIndividual.innerHTML = '<i class="fa-brands fa-apple"></i> iOS – أفراد';
+    btnIOSBusiness.innerHTML = '<i class="fa-brands fa-apple"></i> iOS – أعمال';
+    btnAndroidIndividual.innerHTML = '<i class="fa-brands fa-android"></i> Android – أفراد';
+    btnAndroidBusiness.innerHTML = '<i class="fa-brands fa-android"></i> Android – أعمال';
     langToggle.textContent = "English";
     langToggle.style.left = "auto";
-    langToggle.style.right = "20px"; // move toggle back to right in Arabic
+    langToggle.style.right = "20px";
     isArabic = true;
   }
 });
@@ -191,3 +230,4 @@ langToggle.addEventListener('click', () => {
 
 </body>
 </html>
+
