--- a/hawelli/index.html
+++ b/hawelli/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>محفظة حولّي – Hawelli</title>
+<title>Hawelli Wallet</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="icon" type="image/png" href="../assets/images/image.png">
 
 <style>
 :root {
@@ -15,6 +16,7 @@
   --bg: #F5F7FF;
 }
 
+/* RESET & BODY */
 * {
   margin: 0;
   padding: 0;
@@ -28,7 +30,125 @@ body {
   line-height: 1.8;
 }
 
-/* ===== HERO ===== */
+/* HEADER */
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end; /* logo and title on right */
+  padding: 20px 40px;
+  background: #fff;
+  box-shadow: 0 3px 15px rgba(0,0,0,0.1);
+  position: relative; /* for toggle positioning */
+}
+
+.header img {
+  width: 60px;
+  height: 60px;
+  border-radius: 12px;
+  margin-left: 12px;
+  object-fit: cover;
+}
+
+.header h1 {
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+
+/* HERO - phone mockup + decorative background */
+.phone {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.phone::before {
+  /* soft blurred artwork using the same asset for depth */
+  content: "";
+  position: absolute;
+  width: 460px;
+  height: 460px;
+  right: -60px;
+  top: -40px;
+  background-image: url('Wallets (1).png');
+  background-size: cover;
+  background-position: center;
+  filter: blur(40px) saturate(120%);
+  opacity: 0.12;
+  transform: rotate(-12deg) scale(1.2);
+  border-radius: 40%;
+  pointer-events: none;
+  z-index: 0;
+}
+
+.phone img.mockup.small {
+  position: absolute;
+  left: -100px;
+  top: 70px;
+  width: 220px;
+  height: 460px;
+  object-fit: cover;
+  border-radius: 40px;
+  transform: rotate(-12deg) translateY(12px);
+  box-shadow: 0 36px 70px rgba(17,24,39,0.28);
+  border: 12px solid #000;
+  background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.03));
+  position: absolute;
+  z-index: 1;
+}
+
+.phone img.mockup {
+  width: 300px;
+  height: 620px;
+  border-radius: 48px;
+  object-fit: cover;
+  box-shadow: 0 40px 80px rgba(17,24,39,0.35), 0 8px 20px rgba(17,24,39,0.2);
+  border: 14px solid #000;
+  background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.03));
+  position: relative;
+  z-index: 2;
+}
+
+/* soft background blur slightly shifted to account for twin-phone layout */
+.phone::before {
+  width: 520px;
+  height: 520px;
+  right: -80px;
+  top: -60px;
+  opacity: 0.10;
+}
+
+/* Responsive adjustments */
+@media (max-width: 900px) {
+  .header img {
+    width: 54px;
+    height: 110px;
+  }
+
+  .phone::before { display: none; }
+
+  .phone img.mockup.small { display: none; }
+
+  .phone img.mockup {
+    width: 220px;
+    height: 460px;
+    border-radius: 36px;
+  }
+}
+
+/* LANGUAGE BUTTON */
+.lang-toggle {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 10px 16px;
+  border-radius: 12px;
+  font-weight: 600;
+  cursor: pointer;
+  z-index: 100; /* above header */
+}
+
+/* HERO */
 .hero {
   background: linear-gradient(135deg, var(--deep), var(--primary), var(--accent));
   color: #fff;
@@ -44,35 +164,24 @@ body {
   align-items: center;
 }
 
-/* ===== COMING SOON BADGE (Big & Centered) ===== */
+/* COMING SOON */
 .coming-soon {
   display: block;
-  margin: 0 auto 25px; /* centered horizontally */
-  padding: 15px 50px; /* bigger & wide */
+  margin: 0 auto 25px;
+  padding: 15px 50px;
   border-radius: 999px;
-  font-size: 2.5rem; /* bigger text */
+  font-size: 2.5rem;
   font-weight: 700;
-  letter-spacing: 1px;
-  background: linear-gradient(90deg, #ffffff, #dbe7ff, #ffffff);
+  background: linear-gradient(90deg, #fff, #dbe7ff, #fff);
   color: var(--deep);
   animation: pulseGlow 2.8s ease-in-out infinite;
   text-align: center;
-  box-shadow: 0 0 0 rgba(255,255,255,0.6);
 }
 
 @keyframes pulseGlow {
-  0% {
-    transform: scale(1);
-    box-shadow: 0 0 0 0 rgba(255,255,255,0.6);
-  }
-  50% {
-    transform: scale(1.08);
-    box-shadow: 0 0 25px 10px rgba(255,255,255,0.35);
-  }
-  100% {
-    transform: scale(1);
-    box-shadow: 0 0 0 0 rgba(255,255,255,0.6);
-  }
+  0% { transform: scale(1); }
+  50% { transform: scale(1.08); }
+  100% { transform: scale(1); }
 }
 
 .hero h1 {
@@ -83,10 +192,9 @@ body {
 .hero p {
   font-size: 1.4rem;
   margin-bottom: 35px;
-  opacity: 0.95;
 }
 
-/* ===== BUTTONS ===== */
+/* BUTTONS */
 .hero-buttons {
   display: flex;
   gap: 15px;
@@ -100,8 +208,6 @@ body {
   text-decoration: none;
   background: #fff;
   color: var(--deep);
-  transition: 0.3s;
-  cursor: pointer;
 }
 
 .hero-buttons a.secondary {
@@ -110,35 +216,15 @@ body {
   border: 2px solid rgba(255,255,255,0.5);
 }
 
-.hero-buttons a:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 12px 30px rgba(0,0,0,0.25);
-}
-
-/* ===== LOGO MOCKUP ===== */
-.phone {
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 280px;
-  height: 280px;
-  margin: 0 auto;
-  background: #ffffff;
-  border-radius: 50%;
-  padding: 8px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-}
-
+/* PHONE */
 .phone img {
-  width: 100%;
-  height: 100%;
+  width: 260px;
+  height: 260px;
   border-radius: 50%;
   object-fit: cover;
-  filter: drop-shadow(0 30px 60px rgba(0,0,0,0.35));
 }
 
-/* ===== SECTIONS ===== */
+/* SECTIONS */
 section {
   max-width: 1200px;
   margin: auto;
@@ -152,17 +238,7 @@ h2 {
   color: var(--deep);
 }
 
-h2::after {
-  content: "";
-  display: block;
-  width: 70px;
-  height: 4px;
-  margin: 18px auto 0;
-  border-radius: 10px;
-  background: linear-gradient(90deg, var(--deep), var(--accent));
-}
-
-/* ===== FEATURES ===== */
+/* FEATURES */
 .features {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -173,17 +249,10 @@ h2::after {
   background: #fff;
   padding: 40px;
   border-radius: 22px;
-  box-shadow: 0 15px 40px rgba(79,107,255,0.15);
   text-align: center;
 }
 
-.feature strong {
-  display: block;
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-}
-
-/* ===== FOOTER ===== */
+/* FOOTER */
 .footer {
   background: linear-gradient(135deg, #1f2bff, #4F6BFF);
   color: #fff;
@@ -198,65 +267,16 @@ h2::after {
   gap: 40px;
 }
 
-.footer h3 {
-  font-size: 1.2rem;
-  margin-bottom: 18px;
-}
-
-.footer p {
-  opacity: 0.9;
-  margin-bottom: 8px;
-}
-
 .footer-bottom {
-  margin-top: 45px;
-  padding-top: 18px;
-  border-top: 1px solid rgba(255,255,255,0.25);
+  margin-top: 40px;
   text-align: center;
-  font-size: 0.95rem;
   opacity: 0.85;
 }
 
-/* ===== LANGUAGE TOGGLE ===== */
-.lang-toggle {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  background: #fff;
-  color: var(--deep);
-  border: none;
-  padding: 10px 16px;
-  border-radius: 12px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: 0.3s;
-  z-index: 10;
-}
-
-.lang-toggle:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 15px rgba(0,0,0,0.2);
-}
-
-/* ===== RESPONSIVE ===== */
 @media (max-width: 900px) {
   .hero-container {
     grid-template-columns: 1fr;
     text-align: center;
-  }
-
-  .hero-buttons {
-    justify-content: center;
-  }
-
-  .coming-soon {
-    font-size: 1.6rem;
-    padding: 12px 35px;
-  }
-
-  .lang-toggle {
-    top: 10px;
-    left: 10px;
   }
 }
 </style>
@@ -264,47 +284,52 @@ h2::after {
 
 <body>
 
-<!-- LANGUAGE TOGGLE -->
-<button class="lang-toggle" id="langToggle">English</button>
+<!-- HEADER -->
+<header class="header">
+  <img src="../assets/images/image.png" alt="Hawelli Logo">
+  <h1 id="headerTitle">محفظة حولّي</h1>
+  <button class="lang-toggle" id="langToggle">English</button>
+</header>
 
 <!-- HERO -->
 <div class="hero">
   <div class="hero-container">
     <div>
       <div class="coming-soon" id="comingSoon">قريباً</div>
-      <h1 id="heroTitle">محفظة حولّي</h1>
+      <h1 id="heroTitle">فلوسك في تليفونك</h1>
       <p id="heroDesc">إدارة أموالك بسهولة وأمان — كل خدماتك المالية في تطبيق واحد</p>
 
       <div class="hero-buttons">
-        <a href="hawelli-link.html" id="heroBtn1">تحميل التطبيق</a>
-        <a class="secondary" id="heroBtn2">اكتشف المزايا</a>
+        <a id="heroBtn1" href="hawelli-link.html">تحميل التطبيق</a>
+        <a id="heroBtn2" class="secondary" href="#features">اكتشف المزايا</a>
       </div>
     </div>
 
     <div class="phone">
-      <img src="../assets/images/image.png" alt="EC8BC5BF-9DF8-4B8D-AE9A-2D6C2D4E2D33.jpeg">
-    </div>
+      <img src="../assets/images/Services (1).png" alt="" aria-hidden="true" class="mockup small">
+      <img src="../assets/images/Wallets (1).png" alt="Hawelli App" class="mockup">
+    </div> 
   </div>
 </div>
 
 <!-- FEATURES -->
 <section id="features">
-  <h2>ماذا يقدم لك حولّي؟</h2>
+  <h2 id="featuresTitle">ماذا يقدم لك حولّي؟</h2>
 
   <div class="features">
     <div class="feature">
-      <strong>دفع ذكي</strong>
-      QR – NFC – رقم الهاتف
+      <strong id="f1t">دفع ذكي</strong>
+      <div id="f1d">QR – NFC – رقم الهاتف</div>
     </div>
 
     <div class="feature">
-      <strong>أمان عالي</strong>
-      حماية ومعايير مصرفية
+      <strong id="f2t">أمان عالي</strong>
+      <div id="f2d">حماية ومعايير مصرفية</div>
     </div>
 
     <div class="feature">
-      <strong>حلول أعمال</strong>
-      تحصيل مدفوعات وتقارير فورية
+      <strong id="f3t">حلول أعمال</strong>
+      <div id="f3d">تحصيل مدفوعات وتقارير فورية</div>
     </div>
   </div>
 </section>
@@ -313,61 +338,114 @@ h2::after {
 <footer class="footer">
   <div class="footer-container">
     <div>
-      <h3>محفظة حولّي</h3>
+      <h3 id="footerTitle">محفظة حولّي</h3>
       <p>Powered by Zaho</p>
-      <p>مرخص من قبل مصرف ليبيا المركزي</p>
+      <p id="footerLicense">مرخص من قبل مصرف ليبيا المركزي</p>
+      <img src="../assets/images/LogoCBL.svg.png" alt="Logo of Central Bank of Libya" style="width: 100px; height: auto; margin-top: 10px;">
     </div>
 
     <div>
-      <h3>التواصل</h3>
+      <h3 id="contactTitle">التواصل</h3>
       <p>contact@zaho.ly</p>
       <p>0912431111</p>
     </div>
 
     <div>
-      <h3>العنوان</h3>
-      <p>جنزور – طرابلس</p>
-      <p>ليبيا</p>
+      <h3 id="addressTitle">العنوان</h3>
+      <p id="addressText">جنزور – طرابلس – ليبيا</p>
     </div>
   </div>
 
-  <div class="footer-bottom">
+  <div class="footer-bottom" id="copyright">
     © 2026 Zaho – جميع الحقوق محفوظة
   </div>
 </footer>
 
 <script>
-// ===== LANGUAGE TOGGLE FUNCTION =====
-const langToggle = document.getElementById('langToggle');
 let isArabic = true;
 
-langToggle.addEventListener('click', () => {
+const ar = {
+  comingSoon: "قريباً",
+  heroTitle: "فلوسك في تليفونك",
+  heroDesc: "إدارة أموالك بسهولة وأمان — كل خدماتك المالية في تطبيق واحد",
+  heroBtn1: "تحميل التطبيق",
+  heroBtn2: "اكتشف المزايا",
+  featuresTitle: "ماذا يقدم لك حولّي؟",
+  f1t: "دفع ذكي",
+  f1d: "QR – NFC – رقم الهاتف",
+  f2t: "أمان عالي",
+  f2d: "حماية ومعايير مصرفية",
+  f3t: "حلول أعمال",
+  f3d: "تحصيل مدفوعات وتقارير فورية",
+  footerTitle: "محفظة حولّي",
+  headerTitle: "محفظة حولّي",
+  footerLicense: "مرخص من قبل مصرف ليبيا المركزي",
+  contactTitle: "التواصل",
+  addressTitle: "العنوان",
+  addressText: "جنزور – طرابلس – ليبيا",
+  copyright: "© 2026 Zaho – جميع الحقوق محفوظة"
+};
+
+const en = {
+  comingSoon: "Coming Soon",
+  heroTitle: "Your Money in Your Phone",
+  heroDesc: "Manage your money easily and securely — all your financial services in one app",
+  heroBtn1: "Download App",
+  heroBtn2: "Explore Features",
+  featuresTitle: "What does Hawelli offer?",
+  f1t: "Smart Payments",
+  f1d: "QR – NFC – Phone Number",
+  f2t: "High Security",
+  f2d: "Bank-grade protection and standards",
+  f3t: "Business Solutions",
+  f3d: "Instant collections and real-time reports",
+  footerTitle: "Hawelli Wallet",
+  headerTitle: "Hawelli Wallet",
+  footerLicense: "Licensed by the Central Bank of Libya",
+  contactTitle: "Contact",
+  addressTitle: "Address",
+  addressText: "Janzour – Tripoli – Libya",
+  copyright: "© 2026 Zaho – All rights reserved"
+};
+
+const toggleButton = document.getElementById("langToggle");
+
+document.getElementById("langToggle").onclick = () => {
+  const data = isArabic ? en : ar;
+
+  document.documentElement.lang = isArabic ? "en" : "ar";
+  document.documentElement.dir = isArabic ? "ltr" : "rtl";
+
+  // Switch text
+  Object.keys(data).forEach(id => {
+    const el = document.getElementById(id);
+    if (el) el.textContent = data[id];
+  });
+
+  // Move toggle button depending on language
   if (isArabic) {
-    document.documentElement.lang = 'en';
-    document.documentElement.dir = 'ltr';
-    document.getElementById('comingSoon').textContent = "Coming Soon";
-    document.getElementById('heroTitle').textContent = "Hawelli Wallet";
-    document.getElementById('heroDesc').textContent = "Manage your money easily and safely — all your financial services in one app";
-    document.getElementById('heroBtn1').textContent = "Download App";
-    document.getElementById('heroBtn2').textContent = "Explore Features";
-    langToggle.textContent = "العربية";
-    isArabic = false;
+    toggleButton.style.left = "20px";
+    toggleButton.style.right = "auto";
   } else {
-    document.documentElement.lang = 'ar';
-    document.documentElement.dir = 'rtl';
-    document.getElementById('comingSoon').textContent = "قريباً";
-    document.getElementById('heroTitle').textContent = "محفظة حولّي";
-    document.getElementById('heroDesc').textContent = "إدارة أموالك بسهولة وأمان — كل خدماتك المالية في تطبيق واحد";
-    document.getElementById('heroBtn1').textContent = "تحميل التطبيق";
-    document.getElementById('heroBtn2').textContent = "اكتشف المزايا";
-    langToggle.textContent = "English";
-    isArabic = true;
+    toggleButton.style.left = "auto";
+    toggleButton.style.right = "20px";
   }
-});
+
+  toggleButton.textContent = isArabic ? "العربية" : "English";
+  isArabic = !isArabic;
+};
+
+// Initial placement for Arabic
+toggleButton.style.right = "20px";
+toggleButton.style.left = "auto";
+
 </script>
 
 </body>
 </html>
+
+
+
 
 
 
