edit pic name logo hawelli

--- a/hawelli/hawelli-link.html
+++ b/hawelli/hawelli-link.html
@@ -162,7 +162,7 @@ body {
 <div class="hero">
 
   <div class="hero-title">
-    <img src="EC8BC5BF-9DF8-4B8D-AE9A-2D6C2D4E2D33.jpeg" alt="Hawelli Logo" class="logo">
+    <img src="../assets/images/image.png" alt="Hawelli Logo" class="logo">
     <h1 id="mainTitle">محفظة حولّي</h1>
   </div>
 
