--- a/hawelli/hawelli-link.html
+++ b/hawelli/hawelli-link.html
@@ -6,6 +6,7 @@
 <title>محفظة حولّي – Hawelli</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="icon" type="image/png" href="../assets/images/image.png">
 
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
