--- a/hawelli/index.html
+++ b/hawelli/index.html
@@ -6,6 +6,8 @@
 <title>Hawelli Wallet</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 <link rel="icon" type="image/png" href="../assets/images/image.png">
 
 <style>
@@ -34,11 +36,11 @@ body {
 .header {
   display: flex;
   align-items: center;
-  justify-content: flex-end; /* logo and title on right */
+  justify-content: flex-end;
   padding: 20px 40px;
   background: #fff;
   box-shadow: 0 3px 15px rgba(0,0,0,0.1);
-  position: relative; /* for toggle positioning */
+  position: relative;
 }
 
 .header img {
@@ -54,7 +56,7 @@ body {
   font-weight: 700;
 }
 
-/* HERO - phone mockup + decorative background */
+/* HERO */
 .phone {
   position: relative;
   display: flex;
@@ -63,18 +65,17 @@ body {
 }
 
 .phone::before {
-  /* soft blurred artwork using the same asset for depth */
   content: "";
   position: absolute;
-  width: 460px;
-  height: 460px;
-  right: -60px;
-  top: -40px;
+  width: 520px;
+  height: 520px;
+  right: -80px;
+  top: -60px;
   background-image: url('Wallets (1).png');
   background-size: cover;
   background-position: center;
   filter: blur(40px) saturate(120%);
-  opacity: 0.12;
+  opacity: 0.10;
   transform: rotate(-12deg) scale(1.2);
   border-radius: 40%;
   pointer-events: none;
@@ -93,7 +94,6 @@ body {
   box-shadow: 0 36px 70px rgba(17,24,39,0.28);
   border: 12px solid #000;
   background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.03));
-  position: absolute;
   z-index: 1;
 }
 
@@ -109,33 +109,6 @@ body {
   z-index: 2;
 }
 
-/* soft background blur slightly shifted to account for twin-phone layout */
-.phone::before {
-  width: 520px;
-  height: 520px;
-  right: -80px;
-  top: -60px;
-  opacity: 0.10;
-}
-
-/* Responsive adjustments */
-@media (max-width: 900px) {
-  .header img {
-    width: 54px;
-    height: 110px;
-  }
-
-  .phone::before { display: none; }
-
-  .phone img.mockup.small { display: none; }
-
-  .phone img.mockup {
-    width: 220px;
-    height: 460px;
-    border-radius: 36px;
-  }
-}
-
 /* LANGUAGE BUTTON */
 .lang-toggle {
   position: absolute;
@@ -145,10 +118,10 @@ body {
   border-radius: 12px;
   font-weight: 600;
   cursor: pointer;
-  z-index: 100; /* above header */
+  z-index: 100;
 }
 
-/* HERO */
+/* HERO STYLING */
 .hero {
   background: linear-gradient(135deg, var(--deep), var(--primary), var(--accent));
   color: #fff;
@@ -216,14 +189,6 @@ body {
   border: 2px solid rgba(255,255,255,0.5);
 }
 
-/* PHONE */
-.phone img {
-  width: 260px;
-  height: 260px;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
 /* SECTIONS */
 section {
   max-width: 1200px;
@@ -240,16 +205,47 @@ h2 {
 
 /* FEATURES */
 .features {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .feature {
   background: #fff;
-  padding: 40px;
+  padding: 30px;
   border-radius: 22px;
   text-align: center;
+  width: 260px;
+  border: 2px solid rgba(79,107,255,0.25); /* subtle border */
+  box-shadow: 0 12px 30px rgba(79,107,255,0.15); /* subtle shadow */
+  transition: all 0.3s ease;
+}
+
+.feature:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 18px 35px rgba(79,107,255,0.25);
+  border-color: rgba(79,107,255,0.4);
+}
+
+.feature-icon {
+  width: 64px;
+  height: 64px;
+  margin: 0 auto 18px;
+  border-radius: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(135deg, var(--primary), var(--accent));
+  color: #fff;
+  font-size: 1.8rem;
+  box-shadow: 0 12px 30px rgba(79,107,255,0.35);
+}
+
+.feature strong {
+  display: block;
+  font-size: 1.2rem;
+  margin-bottom: 8px;
 }
 
 /* FOOTER */
@@ -267,74 +263,98 @@ h2 {
   gap: 40px;
 }
 
+.footer-container a {
+  color: #fff;
+  text-decoration: underline;
+  transition: 0.3s;
+}
+
+.footer-container a:hover {
+  color: #e0e0ff;
+}
+
 .footer-bottom {
   margin-top: 40px;
   text-align: center;
   opacity: 0.85;
 }
 
+/* RESPONSIVE */
 @media (max-width: 900px) {
   .hero-container {
     grid-template-columns: 1fr;
     text-align: center;
   }
+
+  .features {
+    justify-content: center;
+  }
+
+  .phone img.mockup.small { display: none; }
+
+  .phone img.mockup { width: 220px; height: 460px; border-radius: 36px; }
+}
+
+html[dir="ltr"] .phone::before {
+  right: auto;
+  left: -60px;
+  transform: rotate(12deg) scale(1.2);
+}
+html[dir="ltr"] .phone img.mockup.small {
+  left: auto;
+  right: -100px;
+  transform: rotate(12deg) translateY(12px);
 }
 </style>
 </head>
 
 <body>
 
-<!-- HEADER -->
 <header class="header">
   <img src="../assets/images/image.png" alt="Hawelli Logo">
   <h1 id="headerTitle">محفظة حولّي</h1>
   <button class="lang-toggle" id="langToggle">English</button>
 </header>
 
-<!-- HERO -->
 <div class="hero">
   <div class="hero-container">
     <div>
       <div class="coming-soon" id="comingSoon">قريباً</div>
       <h1 id="heroTitle">فلوسك في تليفونك</h1>
       <p id="heroDesc">إدارة أموالك بسهولة وأمان — كل خدماتك المالية في تطبيق واحد</p>
-
       <div class="hero-buttons">
         <a id="heroBtn1" href="hawelli-link.html">تحميل التطبيق</a>
         <a id="heroBtn2" class="secondary" href="#features">اكتشف المزايا</a>
       </div>
     </div>
-
     <div class="phone">
       <img src="../assets/images/Services (1).png" alt="" aria-hidden="true" class="mockup small">
       <img src="../assets/images/Wallets (1).png" alt="Hawelli App" class="mockup">
-    </div> 
+    </div>
   </div>
 </div>
 
-<!-- FEATURES -->
 <section id="features">
   <h2 id="featuresTitle">ماذا يقدم لك حولّي؟</h2>
-
   <div class="features">
     <div class="feature">
+      <div class="feature-icon"><i class="fa-solid fa-qrcode"></i></div>
       <strong id="f1t">دفع ذكي</strong>
       <div id="f1d">QR – NFC – رقم الهاتف</div>
     </div>
-
     <div class="feature">
+      <div class="feature-icon"><i class="fa-solid fa-shield-halved"></i></div>
       <strong id="f2t">أمان عالي</strong>
       <div id="f2d">حماية ومعايير مصرفية</div>
     </div>
-
     <div class="feature">
+      <div class="feature-icon"><i class="fa-solid fa-briefcase"></i></div>
       <strong id="f3t">حلول أعمال</strong>
       <div id="f3d">تحصيل مدفوعات وتقارير فورية</div>
     </div>
   </div>
 </section>
 
-<!-- FOOTER -->
 <footer class="footer">
   <div class="footer-container">
     <div>
@@ -346,8 +366,8 @@ h2 {
 
     <div>
       <h3 id="contactTitle">التواصل</h3>
-      <p>contact@zaho.ly</p>
-      <p>0912431111</p>
+      <p><a href="mailto:contact@zaho.ly">contact@zaho.ly</a></p>
+      <p><a href="tel:0912431111">0912431111</a></p>
     </div>
 
     <div>
@@ -355,7 +375,6 @@ h2 {
       <p id="addressText">جنزور – طرابلس – ليبيا</p>
     </div>
   </div>
-
   <div class="footer-bottom" id="copyright">
     © 2026 Zaho – جميع الحقوق محفوظة
   </div>
@@ -410,54 +429,29 @@ const en = {
 
 const toggleButton = document.getElementById("langToggle");
 
-document.getElementById("langToggle").onclick = () => {
+toggleButton.onclick = () => {
   const data = isArabic ? en : ar;
 
   document.documentElement.lang = isArabic ? "en" : "ar";
   document.documentElement.dir = isArabic ? "ltr" : "rtl";
 
-  // Switch text
   Object.keys(data).forEach(id => {
     const el = document.getElementById(id);
     if (el) el.textContent = data[id];
   });
 
-  // Move toggle button depending on language
-  if (isArabic) {
-    toggleButton.style.left = "20px";
-    toggleButton.style.right = "auto";
-  } else {
-    toggleButton.style.left = "auto";
-    toggleButton.style.right = "20px";
-  }
-
+  toggleButton.style.left = isArabic ? "20px" : "auto";
+  toggleButton.style.right = isArabic ? "auto" : "20px";
   toggleButton.textContent = isArabic ? "العربية" : "English";
+
   isArabic = !isArabic;
 };
 
-// Initial placement for Arabic
 toggleButton.style.right = "20px";
 toggleButton.style.left = "auto";
-
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
