--- a/hawelli/index.html
+++ b/hawelli/index.html
@@ -30,13 +30,18 @@ body {
   background: var(--bg);
   color: #0f172a;
   line-height: 1.8;
+  overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
+
+html { overflow-x: hidden; }
 
 /* HEADER */
 .header {
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  align-items: center; /* vertical alignment */
+  justify-content: flex-end; /* keeps RTL alignment */
   padding: 20px 40px;
   background: #fff;
   box-shadow: 0 3px 15px rgba(0,0,0,0.1);
@@ -47,13 +52,16 @@ body {
   width: 60px;
   height: 60px;
   border-radius: 12px;
-  margin-left: 12px;
   object-fit: cover;
+  margin-inline-start: 12px; /* spacing between logo and text */
+  margin-inline-end: 12px;
 }
 
 .header h1 {
   font-size: 1.8rem;
   font-weight: 700;
+  margin: 0;
+  text-align: start;
 }
 
 /* HERO */
@@ -67,15 +75,15 @@ body {
 .phone::before {
   content: "";
   position: absolute;
-  width: 520px;
-  height: 520px;
-  right: -80px;
-  top: -60px;
+  width: 460px;
+  height: 460px;
+  right: -60px;
+  top: -40px;
   background-image: url('Wallets (1).png');
   background-size: cover;
   background-position: center;
   filter: blur(40px) saturate(120%);
-  opacity: 0.10;
+  opacity: 0.12;
   transform: rotate(-12deg) scale(1.2);
   border-radius: 40%;
   pointer-events: none;
@@ -217,8 +225,8 @@ h2 {
   border-radius: 22px;
   text-align: center;
   width: 260px;
-  border: 2px solid rgba(79,107,255,0.25); /* subtle border */
-  box-shadow: 0 12px 30px rgba(79,107,255,0.15); /* subtle shadow */
+  border: 2px solid rgba(79,107,255,0.25);
+  box-shadow: 0 12px 30px rgba(79,107,255,0.15);
   transition: all 0.3s ease;
 }
 
@@ -285,14 +293,18 @@ h2 {
     grid-template-columns: 1fr;
     text-align: center;
   }
-
   .features {
-    justify-content: center;
+    grid-template-columns: 1fr;
   }
 
+  .phone::before { display: none; }
   .phone img.mockup.small { display: none; }
 
-  .phone img.mockup { width: 220px; height: 460px; border-radius: 36px; }
+  .phone img.mockup {
+    width: 220px;
+    height: 460px;
+    border-radius: 36px;
+  }
 }
 
 html[dir="ltr"] .phone::before {
@@ -300,6 +312,7 @@ html[dir="ltr"] .phone::before {
   left: -60px;
   transform: rotate(12deg) scale(1.2);
 }
+
 html[dir="ltr"] .phone img.mockup.small {
   left: auto;
   right: -100px;
@@ -453,5 +466,6 @@ toggleButton.style.left = "auto";
 
 </body>
 </html>
+
 
 
